--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,4 +1,49 @@
+ <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">The OJ</a>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li>{{#link-to 'about'}} About{{/link-to}}</li>
+        <li>{{#link-to 'about'}} People{{/link-to}}</li>
+        <li>{{render 'auth_bar'}}</li>
+      </ul>
+    </div>
+  </div>
+</div>
 
-<h1>The OJ</h1>
-{{outlet}}
-<a href="/auth/github">Sign in with GitHub</a>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 col-md-2 sidebar">
+      <ul class="nav nav-sidebar">
+        <li class="active"><a href="#">Overview</a></li>
+        <li><a href="#">Featured Papers</a></li>
+        <li><a href="#">Submit a paper</a></li>
+      </ul>
+
+
+        {{partial "links_for_editor"}}
+
+
+
+      {{#if reviewer}}
+        {{partial "links_for_reviewer"}}
+      {{/if}}
+
+      {{#if author}}
+        {{partial "links_for_author"}}
+      {{/if}}
+
+    </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      {{outlet}}
+    </div>
+  </div>
+</div>
