switch to using link-to helpers

--- a/app/assets/javascripts/templates/links_for_editor.hbs
+++ b/app/assets/javascripts/templates/links_for_editor.hbs
@@ -1,6 +1,5 @@
 <ul class='nav nav-sidebar'>
-
-  <li><a href='#/papers/waiting_assignment'>Waiting assignment</a></li>
-  <li>{{#link-to 'papers'}}In dispute{{/link-to}}</li>
-  <li>{{#link-to 'papers'}}Reviewed{{/link-to}}</li>
+  <li>{{#link-to 'papers' 'waiting_assignment'}}Waiting Assignment{{/link-to}}</li>
+  <li>{{#link-to 'papers' 'in_dispute'}}In dispute{{/link-to}}</li>
+  <li>{{#link-to 'papers' 'reviewed'}}Reviewed{{/link-to}}</li>
 </ul>
