--- a/app/assets/javascripts/templates/links_for_author.hbs
+++ b/app/assets/javascripts/templates/links_for_author.hbs
@@ -1,5 +1,5 @@
 <ul class='nav nav-sidebar'>
-  <li><a href='#/papers/submitted'>Submited</a></li>
-  <li><a href='#/papers/in_review'>In Review</a></li>
-  <li><a href='#/papers/accepted'>Accepted</a></li>
+  <li>{{#link-to 'papers' 'submitted'}}Submitted{{/link-to}}</li>
+  <li>{{#link-to 'papers' 'in_review'}}In Review{{/link-to}}</li>
+  <li>{{#link-to 'papers' 'accepted'}}Accepted{{/link-to}}</li>
 </ul>
