css for a bunch of stuff

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -9,9 +9,10 @@ $oja_message: #ffd737
 // $text-color: white
 // @import "home"
 
+
+@import "polymerapp"
 @import "bootstrap"
 @import "dashboard"
-
 
 ::selection
   background: rgba(0, 0, 255, 0.3)
