some turducken for about page

--- a/app/assets/components/oj-about-page.html
+++ b/app/assets/components/oj-about-page.html
@@ -1,7 +1,11 @@
 <polymer-element name="oj-about-page" >
   <template>
     <section layout vertical center-center>
-      <h1>About page</h1>
+      <h1>What is this all about?</h1>
+      <p>Turducken frankfurter strip steak short ribs short loin, venison spare ribs ham hock beef ribs sirloin drumstick kielbasa jowl. Prosciutto pastrami capicola turducken jowl, flank salami. Doner pastrami capicola ham rump brisket. Fatback leberkas ham bacon frankfurter salami tri-tip.</p>
+
+      <h1 class="headline">How do we differ from other journals</h1>
+      <p>Shankle doner corned beef, bresaola tri-tip capicola t-bone shoulder turkey jerky venison. Kielbasa corned beef pork chop flank short loin shoulder. Swine brisket bresaola, turkey ham pork loin beef ribs flank hamburger pig kielbasa turducken tongue. Sausage beef ribs ground round pork chop. Turkey shoulder capicola kielbasa boudin.</p>
     </section>
   </template>
 
