--- a/app/assets/components/oj-annotation.html
+++ b/app/assets/components/oj-annotation.html
@@ -1,6 +1,27 @@
-<polymer-element name='oj-annotation' attributes="annotation">
+<polymer-element name='oj-annotation' attributes="annotation  color">
   <template>
-    <p>{{annotation.text}}</p>
+    <div class='container' style=" background-color: {{color}}" >
+      <div class='content'>
+        <p>{{annotation.body}}</p>
+      </div>
+      <div >
+        <core-icon icon='reply'></core-icon>
+      </div>
+    </div>
+
+    <style>
+      :host{
+        width: 100%;
+        position:absolute;
+        color: white;
+      }
+      .content{
+        box-model: border-box;
+        padding: 20px;
+        width: 100%
+        height: 100%
+      }
+    </style>
   </template>
   <script>
     Polymer({
