tweaks for the paper con component

--- a/app/assets/components/oj-paper-icon.html
+++ b/app/assets/components/oj-paper-icon.html
@@ -1,6 +1,6 @@
 <polymer-element name='oj-paper-icon' attributes='paper'>
   <template>
-    <core-item  src="/assets/{{ icon_for_paper(paper) }}.png" label={{paper.title}} vertical>
+    <core-item  src="/assets/paper_view.png" label={{paper.title}} vertical>
       <a href="/#/review/{{paper.sha}}" target="_self"></a>
     </core-item>
   </template>
@@ -10,7 +10,7 @@
       icon_for_paper:function(paper){
 
         paper_icon_options = {pending: "paper_submit", accepted: "paper_accepted",view: "paper_view"};
-        icon = paper_icon_options[paper.state]
+        icon = paper_icon_options[this.paper.state]
         if(!icon){
           icon = paper_icon_options.view
         }
