--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,13 @@
 <html>
 <head>
   <title>Theoj</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <script charset="utf-8" src='/pdf.js'></script>
-  <%= html_import_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body unresolved fullbleed>
+<body>
 
 <%= yield %>
-
 
 </body>
 </html>
