--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,16 @@
 <html>
 <head>
   <title>Theoj</title>
-  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= stylesheet_link_tag    "application", media: "all"%>
   <%= javascript_include_tag "application" %>
+  <script charset="utf-8" src='/pdf.js'></script>
+  <%= html_import_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body unresolved fullbleed>
 
 <%= yield %>
+
 
 </body>
 </html>
