--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Theoj</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.5.2/webcomponents.js"></script>
-  <%= stylesheet_link_tag    "application", media: "all"%>
-  <%= javascript_include_tag "application" %>
-  <script charset="utf-8" src='/pdf.js'></script>
-  <%= html_import_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
+  <head>
+    <title>The Open Journal</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.5.2/webcomponents.js"></script>
+    <%= stylesheet_link_tag    "application", media: "all"%>
+    <%= javascript_include_tag "application" %>
+    <script charset="utf-8" src='/pdf.js'></script>
+    <%= html_import_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
 <body unresolved fullbleed>
 
 <%= yield %>
-
 
 </body>
 </html>
