Playing with styles

--- a/app/assets/components/oj-about-page.html
+++ b/app/assets/components/oj-about-page.html
@@ -1,6 +1,6 @@
-<polymer-element name="oj-about-page" >
+<polymer-element name="oj-about-page">
   <template>
-    <section layout vertical center-center>
+    <section layout vertical style="padding: 10px 30px;">
       <h1>What is this all about?</h1>
       <p>Turducken frankfurter strip steak short ribs short loin, venison spare ribs ham hock beef ribs sirloin drumstick kielbasa jowl. Prosciutto pastrami capicola turducken jowl, flank salami. Doner pastrami capicola ham rump brisket. Fatback leberkas ham bacon frankfurter salami tri-tip.</p>
 
