quick fix for now. Figure out better way of avoiding binding issues later

--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -10,6 +10,7 @@
  *= require paper-elements/paper-elements
  *= require app-router/app-router
  *= require ajax-form/ajax-form
+ *= require ./paper-url-resolver
  *= require_tree .
 
 -->
