Variable name fix

--- a/app/assets/components/paper-url-resolver.html
+++ b/app/assets/components/paper-url-resolver.html
@@ -43,8 +43,8 @@
       },
       constructURL:function(){
         url = "http://arxiv.org/pdf/"+this.paper_id
-        if (this.paper_version){
-          url += ("v"+this.paper_versionx)
+        if (this.paperVersion){
+          url += ("v"+this.paperVersion)
         }
         url += ".pdf"
         return url
