--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -10,6 +10,7 @@
  *= require paper-elements/paper-elements
  *= require app-router/app-router
  *= require ajax-form/ajax-form
+ *= require ./oj-user-login
  *= require_tree .
 
 -->
