adding preview route

--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -37,6 +37,7 @@
         <app-route path='/about' element='oj-about-page'></app-route>
         <app-route path='/submit' element='oj-submit-page'></app-route>
         <app-route path='/papers' element='oj-papers-page'></app-route>
+        <app-route path='/papers/:paper_id/preview' element='oj-preview-page'></app-route>
       </app-router>
     </core-scaffold>
 
