--- a/app/assets/components/oj-submit-page.html
+++ b/app/assets/components/oj-submit-page.html
@@ -9,12 +9,10 @@
 
           <template if="{{ paperValid }}">
             <paper-button  raised on-tap={{submit}} role='button'>Submit</paper-button>
-            <p><span>Paper Id: {{paperId}}</span> <span>PaperUrl: {{paperURL}}</span></p>
           </template>
 
           <template if="{{ !paperValid }}">
             <paper-button  disabled role='button'>Submit</paper-button>
-
           </template>
 
           <p>Please enter the id, abstract url or pdf url of a paper from the arXiv.</p>
@@ -22,28 +20,14 @@
           <p class='example'>http://arxiv.org/abs/1401.0003</p>
           <p class='example'>http://arxiv.org/pdf/1401.0003.pdf</p>
 
-          <paper-url-resolver       text={{paperIdentifier}}
-                                    paperId={{paperId}}
-                                    paperVersion={{paperVersion}}
-                                    paperURL={{paperURL}}
-                                    resolved={{paperValid}}></paper-url-resolver>
-
         </paper-shadow>
 
-        <core-ajax on-core-response="{{response}}"
-                   id='postRequest'
-                   url='/papers/'
-                   method='POST'
-                   contentType="application/json"
-                   handleAs="json" >
-        </core-ajax>
-
-        <template if="{{submitted}}">
-          <paper-shadow flex center-justified vertical layout center z="1">
-            <h2>Submitted</h2>
-            <oj-paper-icon paper={{paper}}></oj-paper-icon>
-          </paper-shadow>
-        </template>
+        <paper-url-resolver       text={{paperIdentifier}}
+                                  paperId={{paperId}}
+                                  paperVersion={{paperVersion}}
+                                  paperURL={{paperURL}}
+                                  resolved={{paperValid}}>
+        </paper-url-resolver>
 
     </section>
 
@@ -79,15 +63,7 @@
       paperURL:"inital",
 
       submit:function(){
-        this.$.postRequest.body=this.params()
-        this.$.postRequest.go()
-      },
-      response:function(response){
-        this.submitted = true;
-        this.paper     = response.detail.response
-      },
-      params:function(params){
-        return JSON.stringify({paper:{location: this.paperURL}})
+        window.location="/#/papers/"+this.paperId+"/preview"
       }
     })
   </script>
