--- a/app/assets/components/oj-user-login.html
+++ b/app/assets/components/oj-user-login.html
@@ -1,4 +1,4 @@
-<polymer-element name="oj-user-login" attributes='user'>
+<polymer-element name="oj-user-login" attributes='user userReady'>
   <template>
     <template if="{{user.name != undefined}}">
       <a class='link' href='/auth/orcid'>{{user.name}} {{ {"(Editor)": user.editor} | tokenList }}</a>
@@ -9,7 +9,7 @@
       <a class='link' href='/auth/orcid'>Sign In</a>
     </template>
 
-    <core-ajax auto url='/current_user' handleAs="json" response={{user}}></core-ajax>
+    <core-ajax auto url='/current_user' handleAs="json" response={{user}} on-core-response={{isReady}}></core-ajax>
 
     <style>
       a {
@@ -24,6 +24,10 @@
 
   <script>
     Polymer({
+      userReady: false,
+      isReady:function(){
+        this.userReady=true
+      }
     })
   </script>
 
