make notification toast more generic

--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -49,7 +49,7 @@
       </app-router>
     </core-scaffold>
 
-    <paper-toast id="loginError" class="capsule core-transition core-transition-bottom" text="Please Login" style="border-radius:0px;padding-right: 60px; position: fixed; outline: none; z-index: 24; box-sizing: border-box; display: none;" role="status" touch-action="none" tabindex="-1"></paper-toast>
+    <paper-toast id="notification" class="capsule core-transition core-transition-bottom" text="" style="border-radius:0px;padding-right: 60px; position: fixed; outline: none; z-index: 24; box-sizing: border-box; display: none;" role="status" touch-action="none" tabindex="-1"></paper-toast>
 
     <style>
       :host /deep/ core-toolbar {
@@ -94,8 +94,8 @@
         this.showNotification(event.detail)
       },
       showNotification:function(text){
-        this.$.loginError.text = text
-        this.$.loginError.show()
+        this.$.notification.text = text
+        this.$.notification.show()
       }
     });
   </script>
